[package]
name = "rgrok-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "rgrok tunnel client CLI"

[[bin]]
name = "rgrok"
path = "src/main.rs"

[dependencies]
rgrok-proto = { path = "../rgrok-proto" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
axum = { workspace = true }
yamux = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
jsonwebtoken = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
tokio-rustls = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
crossterm = { workspace = true }
pin-project-lite = { workspace = true }
dashmap = { workspace = true }
toml = "0.8"
dirs = "6"
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
