[package]
name = "rgrok-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared protocol types for rgrok tunnel system"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }
pin-project-lite = { workspace = true }
tokio-tungstenite = { workspace = true }
yamux = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
