[package]
name = "rgrok-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "rgrok tunnel server daemon"

[[bin]]
name = "rgrok-server"
path = "src/main.rs"

[dependencies]
rgrok-proto = { path = "../rgrok-proto" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }
instant-acme = { workspace = true }
yamux = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
jsonwebtoken = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
tokio-rustls = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
bcrypt = { workspace = true }
base64 = { workspace = true }
pin-project-lite = { workspace = true }
toml = "1"
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
prometheus = { workspace = true }
x509-parser = { workspace = true }
